# ahl_ros_pkg

./: LICENSE  README.md
ahl_robot/ahl_gazebo_interface/: CMakeLists.txt  package.xml
ahl_robot/ahl_gazebo_interface/include/ahl_gazebo_interface/: exception.hpp  gazebo_interface.hpp
ahl_robot/ahl_gazebo_interface/src/: gazebo_interface.cpp
ahl_robot/ahl_lwr_server/: CMakeLists.txt  package.xml
ahl_robot/ahl_lwr_server/test/: test.cpp  test2.cpp  test3.cpp
ahl_robot/ahl_robot/: CMakeLists.txt  package.xml
ahl_robot/ahl_robot/include/ahl_robot/: ahl_robot.hpp  definition.hpp  exception.hpp
ahl_robot/ahl_robot/models/pr2/: model.sdf
ahl_robot/ahl_robot/models/youbot/: model.sdf  model.sdf.tmp2
ahl_robot/ahl_robot/src/parser/: mnp_generator.cpp  sdf_parser.cpp
ahl_robot/ahl_robot/src/robot/: manipulator.cpp  mobility.cpp  parser.cpp  robot.cpp  transformation.cpp
ahl_robot/ahl_robot/src/tf/: tf_publisher.cpp
ahl_robot/ahl_robot/src/utils/: math.cpp
ahl_robot/ahl_robot/test/: test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
ahl_robot/ahl_robot/yaml/: lwr.yaml  lwr.yaml.org  pr2.yaml  pr2.yaml.org  red_arm.yaml  youbot.yaml  youbot_arm.yaml
ahl_robot/ahl_robot_actions/: CMakeLists.txt  package.xml
ahl_robot/ahl_robot_actions/action/: Float.action  JointSpaceControl.action  MotionControl.action  SetJoint.action  TaskSpaceControl.action  TaskSpaceHybridControl.action
ahl_robot/ahl_robot_controller/: CMakeLists.txt  package.xml  whole_body_controller.cpp
ahl_robot/ahl_robot_controller/cfg/: Param.cfg  dynamic_param.cfg
ahl_robot/ahl_robot_controller/include/ahl_robot_controller/: ahl_robot_controller.hpp  dynamics_param.hpp  exception.hpp  exceptions.hpp  param.hpp  param_base.hpp  robot_controller.hpp  tasks.hpp  whole_body_controller.hpp
ahl_robot/ahl_robot_controller/launch/: youbot.launch
ahl_robot/ahl_robot_controller/src/: ahl_robot_controller.cpp  param.cpp  robot_controller.cpp
ahl_robot/ahl_robot_controller/src/common/: effective_mass_matrix3d.cpp
ahl_robot/ahl_robot_controller/src/mobility/: mecanum_wheel.cpp
ahl_robot/ahl_robot_controller/src/robot/: joint.cpp  link.cpp  manipulator.cpp  mobile_base.cpp  robot.cpp  tf_publisher.cpp  xml_parser.cpp
ahl_robot/ahl_robot_controller/src/task/: damping.cpp  gravity_compensation.cpp  joint_control.cpp  joint_limit.cpp  multi_task.cpp  orientation_control.cpp  position_control.cpp
ahl_robot/ahl_robot_controller/src/utils/: math.cpp
ahl_robot/ahl_robot_controller/test/: test.cpp
ahl_robot/ahl_robot_controller/yaml/: sample.yaml
ahl_robot/ahl_robot_msgs/: CMakeLists.txt
ahl_robot/ahl_robot_msgs/msg/: GeneralizedForce.msg
ahl_robot/ahl_robot_samples/: CMakeLists.txt  package.xml
ahl_robot/ahl_robot_samples/cfg/: Pr2Param.cfg
ahl_robot/ahl_robot_samples/include/ahl_robot_samples/: robot_demo.hpp
ahl_robot/ahl_robot_samples/launch/: pr2.launch
ahl_robot/ahl_robot_samples/src/pr2/: pr2.cpp
ahl_robot/ahl_robot_samples/yaml/: pr2.yaml
ahl_robot/ahl_robot_srvs/: CMakeLists.txt  package.xml
ahl_robot/ahl_robot_srvs/srv/: JointSpaceControl.srv  SetJoint.srv  TaskSpaceControl.srv
ahl_robot/ahl_utils/: CMakeLists.txt  package.xml
ahl_robot/ahl_utils/src/: shared_memory.cpp
ahl_robot/ahl_youbot_gui/: CMakeLists.txt  mainpage.dox  package.xml
ahl_robot/ahl_youbot_gui/src/: main.cpp  main_window.cpp  qnode.cpp
ahl_robot/ahl_youbot_gui/ui/: main_window.ui
ahl_robot/ahl_youbot_sample/: CMakeLists.txt  package.xml  setup.sh
ahl_robot/ahl_youbot_sample/launch/: tuning.launch
ahl_robot/ahl_youbot_server/: CMakeLists.txt  package.xml
ahl_robot/ahl_youbot_server/doc/: HardwareSetup.txt  SoftwareSetup.txt
ahl_robot/ahl_youbot_server/gazebo/: youbot.world
ahl_robot/ahl_youbot_server/launch/: gazebo_ahl_youbot_server.launch  gazebo_youbot.launch  youbot_server.launch  youbot_world.launch
ahl_robot/ahl_youbot_server/src/: main.cpp  param.cpp  server.cpp
ahl_robot/ahl_youbot_server/test/: test.cpp
ahl_robot/ahl_youbot_server/yaml/: youbot.yaml  youbot_sim.yaml
ahl_ros_pkg/: CMakeLists.txt  package.xml
apps/manipit/: CMakeLists.txt  package.xml
apps/manipit/launch/: manipit.launch
apps/manipit/src/: main.cpp  manipit.cpp  manipit_server_impl.cpp
apps/train_with_cg/: CMakeLists.txt  package.xml
apps/train_with_cg/cg/: righthand.cfg
apps/train_with_cg/launch/: image_collector.launch  opengl_env.xml
apps/train_with_cg/src/: depth_image_saver.cpp  display.cpp  euler_angles.cpp  fingers.cpp  hand_image_collector.cpp  hand_pose.cpp  main.cpp  quaternion.cpp  zxy_euler_angles.cpp  zyx_euler_angles.cpp
apps/train_with_cg/yaml/: auto_encoder1.yaml  back_propagation.yaml
manipit/train_with_cg/: CMakeLists.txt  package.xml
manipit/train_with_cg/data/: output.txt
manipit/train_with_cg/launch/: auto_encoder.launch  filter_checker.launch
manipit/train_with_cg/yaml/: auto_encoder0.yaml.org
ml/neural_network/: CMakeLists.txt  CMakeLists.txt~  package.xml
ml/neural_network/src/: config.cpp  training_data.cpp
ml/neural_network/test/: test.cpp  test_max_min.yaml  test_result.yaml
ml/neural_network/yaml/: sample.yaml
motion_planner/ahl_rrt/: CMakeLists.txt  package.xml
motion_planner/ahl_rrt/launch/: rrt_test.launch
motion_planner/ahl_rrt/msg/: Edge2D.msg  Edge3D.msg
motion_planner/ahl_rrt/src/: param.cpp  rrt.cpp
motion_planner/ahl_rrt/test/: test.cpp  visualization.cpp
robot/ahl_robot_msgs/: package.xml
robot/ahl_robot_msgs/msg/: GeneralizedCoordinate.msg  RobotPose.msg
robot/ahl_youbot_sample/: CMakeLists.txt  package.xml
robot/ahl_youbot_server/: CMakeLists.txt  setup.sh
robot/ahl_youbot_server/cfg/: Param.cfg
robot/ahl_youbot_server/doc/: SoftwareSetup.txt
robot/ahl_youbot_server/launch/: gazebo_youbot.launch
robot/ahl_youbot_server/src/: main.cpp
robot/ahl_youbot_server/test/: test.cpp
robot/ahl_youbot_server/yaml/: ahl_youbot_config.yaml
utils/std_utils/: CMakeLists.txt  package.xml
utils/std_utils/src/: io_utils.cpp  str_utils.cpp  yaml_loader.cpp  yaml_utils.cpp
(+943 files in other folders)
