<?xml version="1.0"?>
<package>
  <name>ahl_ros_pkg</name>
  <version>0.0.0</version>
  <description>
    <p>Metapackage that contains many packages for Daichi's fun</p>
  </description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD, GPL, LGPL</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_ros_pkg</url> -->
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
