<?xml version="1.0"?>
<package>
  <name>ahl_lwr_server</name>
  <version>0.0.0</version>
  <description>The ahl_lwr_server package</description>
  <maintainer email="daichi@todo.todo">daichi</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_lwr_server</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ahl_gazebo_interface</build_depend>
  <build_depend>ahl_robot</build_depend>
  <build_depend>ahl_robot_controller</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <run_depend>ahl_gazebo_interface</run_depend>
  <run_depend>ahl_robot</run_depend>
  <run_depend>ahl_robot_controller</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
