<?xml version="1.0"?>
<package>
  <name>ahl_youbot_gui</name>
  <version>0.1.0</version>
  <description>
     ahl_youbot_gui
  </description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <author>Daichi Yoshikawa</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->
<!--  <depend package="ahl_robot_msgs"/>
  <depend package="ahl_robot_srvs"/>
  <depend package="std_msgs"/>
  <depend package="std_srvs"/>
  <depend package="geometry_msgs"/>
  <depend package="sensor_msgs"/>
  <depend package="image_transport"/>
-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>ahl_robot_msgs</build_depend>
  <build_depend>ahl_robot_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>libqt4-dev</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>ahl_robot_msgs</run_depend>
  <run_depend>ahl_robot_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>libqt4-dev</run_depend>
</package>
