<?xml version="1.0"?>
<package>
  <name>ahl_youbot_server</name>
  <version>0.0.0</version>
  <description>The ahl_youbot_server package</description>
  <maintainer email="daichi.yoshikawa@gmail.com">daichi</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_youbot_server</url> -->
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ahl_robot_actions</build_depend>
  <build_depend>ahl_robot_srvs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>youbot_driver</build_depend>

  <run_depend>ahl_robot_actions</run_depend>
  <run_depend>ahl_robot_srvs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>youbot_driver</run_depend>
</package>
