<?xml version="1.0"?>
<package>
  <name>neural_network</name>
  <version>1.0.0</version>
  <description>
    This package provides implementations of multi threaded neural_network.
  </description>

  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/neural_network</url>
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_utils</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_utils</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
